# quince

./: .gitignore  CLAUDE.md  Makefile  README.md  versions.env
.github/workflows/: ci.yml
core/: .golangci.yml  go.mod  go.sum
core/cmd/quince/: admin_cmd.go  backup_cmd.go  backup_cmd_test.go  live.go  main.go  main_test.go  muxers.go  muxers_test.go
core/internal/auth/: argon2.go  auth_test.go  cookie.go  csrf.go  ratelimit.go  service.go
core/internal/backup/: backup.go  cli.go  engine.go  engine_test.go  engine_transport_test.go  fake_idevicebackup2_test.go  joblog.go  parser.go  parser_test.go  sampler.go  supervisor.go
core/internal/bus/: bus.go  bus_test.go
core/internal/config/: bootstrap.go  config_test.go  schema.go  service.go  validate.go
core/internal/demo/: deviceops.go  fixtures.go  jobcontrol.go  jobcontrol_test.go  provider.go  (+1 more)
deploy/: Dockerfile  compose.lab.yml  compose.nas.yml  dev.md  e2e-run.sh  storage.md
docs/: contracts.md  quince.design.md  quince.progress.md  quince.proposals.md  quince.roadmap.md  quince.stack.md  ui.design.md
docs/program/: quince.program.md
ui/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/e2e/: story1-setup-login.spec.ts  story2-job-log-recover.spec.ts  story3-device-ops.spec.ts  story4-backup-now.spec.ts  story5-mobile-soak.spec.ts
ui/public/: manifest.webmanifest
ui/src/: App.test.tsx  App.tsx  index.css  main.tsx
vault/: pyproject.toml
vault/src/quince_vault/: __init__.py  __main__.py
vault/tests/: test_cli.py
(+205 files in other folders)
